Fixed sidenav trigger icon alignment on mobile

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -44,6 +44,7 @@ header {
       @media #{$small-and-down} {
         justify-content: space-between;
       }
+      align-items: center;
 
       li {
         // Center each nav item
